# primes-python

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml
docs/source/: conf.py  index.rst
src/primes/: __init__.py  core.py
tests/: test_core.py
