[build-system]
requires = ["setuptools>=80.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "primes"
version = "0.1.0"
description = "A Python package for prime number utilities"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Mani Amoozadeh", email = "mani.amoozadeh2@gmail.com" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

# Dependencies for runtime
dependencies = []

[project.optional-dependencies]
dev = [
    "build",
    "twine",
    "black",
    "pylint",
    "mypy",
    "bandit",
    "pip-audit",
    "ruff",
    "pytest",
    "pytest-cov",
    "coverage",
    "sphinx",
    "sphinx-autodoc-typehints",
    "furo",
]

[project.urls]
Homepage = "https://github.com/ManiAm/primes-python"
Issues = "https://github.com/ManiAm/primes-python/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
